<resources>
    <string name="app_name">TP2App</string>
    <string name="d_terminez_votre_poids">Déterminez votre poids :</string>
    <string name="vous_devez_cliquer_sur_le_bouton_calculer_l_imc_pour_obtenir_un_r_sultat">Vous devez cliquer sur le bouton « Calculer l\'IMC » pour obtenir un résultat.</string>
    <string name="r_sultat">Résultat:</string>
    <string name="reset">RESET</string>
    <string name="calculer_l_imc">Calculer IMC</string>
    <string name="centim_tre">Centimètre</string>
    <string name="m_tre">Mètre</string>
    <string name="d_terminez_votre_taille">Déterminez votre taille :</string>
    <string name="poids">Poids :</string>
    <string name="taille">Taille :</string>

</resources>