<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="183dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/d_terminez_votre_poids"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:gravity="center"
            />


        <EditText
            android:id="@+id/poids"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/poids"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/d_terminez_votre_taille"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/taille"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/taille"
            />

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_centimetre"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/radio_metre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_tre"
                />
            <RadioButton
                android:id="@+id/radio_centimetre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centim_tre"
                />
        </RadioGroup>


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:textSize="18sp"
            tools:text="Appréciation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnimc"
                android:layout_width="73dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/calculer_l_imc" />

            <Button
                android:id="@+id/btnreset"
                android:layout_width="73dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_sultat"
            />
        <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/vous_devez_cliquer_sur_le_bouton_calculer_l_imc_pour_obtenir_un_r_sultat"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>